# cpp23-starter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  sanitizers.yml
cmake/: SanitizeAndWarnings.cmake
include/hello/: hello.hpp
src/: hello.cpp  main.cpp
tests/: hello_test.cpp
